fix: image inline-flex with overflow will still extend its parent element

--- a/packages/theme-chalk/src/image.scss
+++ b/packages/theme-chalk/src/image.scss
@@ -7,13 +7,21 @@
 }
 
 @include b(image) {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  display: inline-block;
   overflow: hidden;
 
   @include e(inner) {
     @extend %size;
+    vertical-align: top;
+
+    @include m(center) {
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: block;
+    }
   }
 
   @include e(placeholder) {
